--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
@@ -28,6 +29,9 @@
     "babel-preset-stage-3": "^6.24.1",
     "copyfiles": "^1.2.0",
     "cross-env": "5.0.0",
+    "eslint": "^3.19.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-react": "^6.10.3",
     "http-server": "^0.10.0",
     "react-hot-loader": "^3.0.0-beta.7",
     "rimraf": "^2.6.1",
@@ -36,11 +40,8 @@
     "webpack-notifier": "1.5.0"
   },
   "dependencies": {
-    "babel-eslint": "^7.1.1",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
-    "eslint": "^3.14.1",
-    "eslint-plugin-react": "^6.9.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2"
   }
