--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com/maxurtutor/frontend.git"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.4",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
@@ -26,15 +27,22 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-3": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "copyfiles": "^1.2.0",
     "cross-env": "5.0.0",
+    "css-loader": "^0.28.7",
     "eslint": "^3.19.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^6.10.3",
     "http-server": "^0.10.0",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-loader": "^2.0.6",
+    "precss": "^2.0.0",
     "react-hot-loader": "^3.0.0-beta.7",
     "rimraf": "^2.6.1",
+    "style-loader": "^0.19.0",
+    "stylelint": "^8.1.1",
+    "stylelint-webpack-plugin": "^0.9.0",
     "webpack": "3.5.2",
     "webpack-dev-server": "^2.7.1",
     "webpack-notifier": "1.5.0"
@@ -42,7 +50,12 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
+    "prop-types": "^15.6.0",
     "react": "^15.6.2",
-    "react-dom": "^15.6.2"
+    "react-dom": "^15.6.2",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   }
 }
