--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,11 @@
     "stage-0",
     "react"
   ],
+  "env": {
+    "test": {
+      "presets": [["env"], "stage-0", "react"]
+    }
+  },
   "plugins": [
     "transform-runtime",
     "react-hot-loader/babel"
