--- a/.eslintrc
+++ b/.eslintrc
@@ -2,13 +2,19 @@
   "extends": "eslint:recommended",
   "parser": "babel-eslint",
   "env": {
+    "jest/globals": true,
     "browser": true,
     "node": true
   },
   "plugins": [
-    "react"
+    "react",
+    "jest"
   ],
   "rules": {
+    "jest/no-disabled-tests": "warn",
+    "jest/no-focused-tests": "error",
+    "jest/no-identical-title": "error",
+    "jest/valid-expect": "error",
     "no-debugger": 0,
     "no-console": 0,
     "new-cap": 0,
