--- a/package.json
+++ b/package.json
@@ -8,11 +8,21 @@
   "scripts": {
     "start": "webpack-dev-server --config config/webpack.config.js",
     "lint": "eslint src",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prebuild": "rimraf dist",
+    "test": "jest",
+    "prebuild": "rimraf build",
     "build-dev": "webpack -d --config config/webpack.config.js",
     "build-prod": "cross-env NODE_ENV=production webpack -p --config config/webpack.config.js",
     "postbuild": "copyfiles index.html dist"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/test/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/src/styles/"
+    },
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/",
+      "<rootDir>/src/styles/"
+    ]
   },
   "repository": {
     "type": "git",
@@ -23,6 +33,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
+    "babel-jest": "^21.2.0",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
@@ -33,16 +44,25 @@
     "css-loader": "^0.28.7",
     "eslint": "^3.19.0",
     "eslint-loader": "^1.9.0",
+    "eslint-plugin-jest": "^21.2.0",
     "eslint-plugin-react": "^6.10.3",
+    "file-loader": "^1.1.4",
     "http-server": "^0.10.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^21.1.0",
+    "jest-cli": "^21.2.1",
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
     "react-hot-loader": "^3.0.0-beta.7",
+    "react-test-renderer": "^16.0.0",
+    "regenerator-runtime": "^0.11.0",
     "rimraf": "^2.6.1",
     "style-loader": "^0.19.0",
     "stylelint": "^8.1.1",
     "stylelint-webpack-plugin": "^0.9.0",
+    "uglify": "^0.1.5",
+    "url-loader": "^0.6.1",
     "webpack": "3.5.2",
     "webpack-dev-server": "^2.7.1",
     "webpack-notifier": "1.5.0"
@@ -51,8 +71,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "prop-types": "^15.6.0",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
