--- a/package.json
+++ b/package.json
@@ -42,13 +42,16 @@
     "copyfiles": "^1.2.0",
     "cross-env": "5.0.0",
     "css-loader": "^0.28.7",
+    "es6-promise-promise": "^1.0.0",
     "eslint": "^3.19.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-jest": "^21.2.0",
     "eslint-plugin-react": "^6.10.3",
+    "exports-loader": "^0.6.4",
     "file-loader": "^1.1.4",
     "http-server": "^0.10.0",
     "identity-obj-proxy": "^3.0.0",
+    "imports-loader": "^0.7.1",
     "jest": "^21.1.0",
     "jest-cli": "^21.2.1",
     "postcss-cssnext": "^3.0.2",
@@ -70,6 +73,8 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
+    "install": "^0.10.1",
+    "npm": "^5.4.2",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
