--- a/package.json
+++ b/package.json
@@ -42,18 +42,19 @@
     "copyfiles": "^1.2.0",
     "cross-env": "5.0.0",
     "css-loader": "^0.28.7",
-    "es6-promise-promise": "^1.0.0",
     "eslint": "^3.19.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-jest": "^21.2.0",
     "eslint-plugin-react": "^6.10.3",
     "exports-loader": "^0.6.4",
     "file-loader": "^1.1.4",
+    "graceful-fs": "^4.1.11",
     "http-server": "^0.10.0",
     "identity-obj-proxy": "^3.0.0",
     "imports-loader": "^0.7.1",
     "jest": "^21.1.0",
     "jest-cli": "^21.2.1",
+    "minimatch": "^3.0.4",
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
@@ -73,14 +74,14 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
-    "install": "^0.10.1",
-    "npm": "^5.4.2",
+    "es6-promise": "^4.1.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "whatwg-fetch": "^2.0.3"
   }
 }
