--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Frontend Template",
   "main": "index.js",
   "scripts": {
-    "test": "echo \\\"Error: no test specified\\\" && exit 1"
+    "start": "webpack-dev-server --config config/webpack.config.js",
+    "lint": "eslint src",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prebuild": "rimraf dist",
+    "build-dev": "webpack -d --config config/webpack.config.js",
+    "build-prod": "cross-env NODE_ENV=production webpack -p --config config/webpack.config.js",
+    "postbuild": "copyfiles index.html dist"
   },
   "repository": {
     "type": "git",
@@ -23,5 +29,31 @@
   "bugs": {
     "url": "https://github.com/maxurtutor/frontend/issues"
   },
-  "homepage": "https://github.com/maxurtutor/frontend#readme"
+  "homepage": "https://github.com/maxurtutor/frontend#readme",
+  "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "babel-runtime": "^6.26.0",
+    "es6-promise": "^4.1.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "prop-types": "^15.6.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-es6-promise": "^1.1.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "react-hot-loader": "^3.0.0-beta.7",
+    "webpack": "^3.6.0",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.9.1",
+    "webpack-notifier": "^1.5.0"
+  }
 }
