--- a/.babelrc
+++ b/.babelrc
@@ -22,6 +22,7 @@
   },
   "plugins": [
     "transform-runtime",
-    "react-hot-loader/babel"
+    "react-hot-loader/babel",
+    "es6-promise"
   ]
 }
