--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-eslint": "^7.2.3",
     "babel-jest": "^21.2.0",
     "babel-loader": "7.1.1",
+    "babel-plugin-es6-promise": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.22.0",
@@ -68,11 +69,11 @@
     "uglify": "^0.1.5",
     "url-loader": "^0.6.1",
     "webpack": "3.5.2",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.7.1",
     "webpack-notifier": "1.5.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "es6-promise": "^4.1.1",
     "prop-types": "^15.6.0",
