--- a/package.json
+++ b/package.json
@@ -54,6 +54,13 @@
     "webpack": "^3.6.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-notifier": "^1.5.0"
+    "webpack-notifier": "^1.5.0",
+
+    "postcss-cssnext": "^3.0.2",
+    "postcss-loader": "^2.0.6",
+    "precss": "^2.0.0",
+    "rimraf": "^2.6.1",
+    "style-loader": "^0.19.0",
+    "css-loader": "^0.28.7"
   }
 }
