--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --config config/webpack.config.js",
     "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prebuild": "rimraf dist",
+    "prebuild": "rimraf build",
     "build-dev": "webpack -d --config config/webpack.config.js",
     "build-prod": "cross-env NODE_ENV=production webpack -p --config config/webpack.config.js",
     "postbuild": "copyfiles index.html dist"
@@ -44,23 +44,30 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-es6-promise": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "webpack": "^3.6.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-notifier": "^1.5.0",
-
+    "css-loader": "^0.28.7",
+    "eslint": "^3.19.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-jest": "^21.2.0",
+    "eslint-plugin-react": "^6.10.3",
+    "file-loader": "^1.1.5",
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
+    "react-hot-loader": "^3.0.0-beta.7",
+    "react-pure-html-component": "0.0.1",
     "rimraf": "^2.6.1",
     "style-loader": "^0.19.0",
-    "css-loader": "^0.28.7"
+    "url-loader": "^0.6.2",
+    "webpack": "^3.6.0",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.9.1",
+    "webpack-notifier": "^1.5.0"
   }
 }
