--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config config/webpack.config.js",
-    "lint": "eslint src",
+    "lint-js": "eslint src",
+    "lint-css": "stylelint \"**/*.css \" --verbose stylelint --config ./.stylelintrc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "rimraf build",
     "build-dev": "webpack -d --config config/webpack.config.js",
@@ -64,8 +65,11 @@
     "react-pure-html-component": "0.0.1",
     "rimraf": "^2.6.1",
     "style-loader": "^0.19.0",
+    "stylelint": "^8.2.0",
+    "stylelint-webpack-plugin": "^0.9.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-notifier": "^1.5.0"
