--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --config config/webpack.config.js",
     "lint-js": "eslint src",
     "lint-css": "stylelint \"**/*.css \" --verbose stylelint --config ./.stylelintrc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prebuild": "rimraf build",
     "build-dev": "webpack -d --config config/webpack.config.js",
     "build-prod": "cross-env NODE_ENV=production webpack -p --config config/webpack.config.js",
@@ -47,6 +47,7 @@
     "autoprefixer": "^7.1.5",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-es6-promise": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -61,11 +62,14 @@
     "eslint-plugin-jest": "^21.2.0",
     "eslint-plugin-react": "^6.10.3",
     "file-loader": "^1.1.5",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^21.2.1",
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-pure-html-component": "0.0.1",
+    "react-test-renderer": "^16.0.0",
     "rimraf": "^2.6.1",
     "style-loader": "^0.19.0",
     "stylelint": "^8.2.0",
@@ -76,5 +80,15 @@
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-notifier": "^1.5.0"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/test/__mocks__/fileMock.js",
+      "\\.(css|less)$": "identity-obj-proxy"
+    },
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/",
+      "<rootDir>/src/main/js/styles/"
+    ]
   }
 }
