--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Frontend Template",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config config/webpack.config.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.js --progress",
     "lint-js": "eslint src",
     "lint-css": "stylelint \"**/*.css \" --verbose stylelint --config ./.stylelintrc",
     "test": "jest",
     "prebuild": "rimraf build",
-    "build-dev": "webpack -d --config config/webpack.config.js",
-    "build-prod": "cross-env NODE_ENV=production webpack -p --config config/webpack.config.js",
+    "build-dev": "cross-env NODE_ENV=development webpack -d --config config/webpack.config.js --progress",
+    "build-prod": "cross-env NODE_ENV=production webpack -p --config config/webpack.config.js --progress",
     "postbuild": "copyfiles index.html build"
   },
   "repository": {
@@ -61,9 +61,13 @@
     "eslint-loader": "^1.9.0",
     "eslint-plugin-jest": "^21.2.0",
     "eslint-plugin-react": "^6.10.3",
+    "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.30.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^21.2.1",
+    "lodash": "^4.17.4",
+    "manifest-revision-webpack-plugin": "^0.4.1",
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
