--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "es6-promise": "^4.1.1",
+    "material-ui": "^0.19.4",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
-    "prop-types": "^15.6.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
