--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-runtime": "^6.26.0",
     "es6-promise": "^4.1.1",
     "material-ui": "^0.19.4",
+    "normalize.css": "^7.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -66,6 +67,8 @@
     "html-webpack-plugin": "^2.30.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^21.2.1",
+    "less": "^3.0.0-alpha.3",
+    "less-loader": "^4.0.5",
     "lodash": "^4.17.4",
     "manifest-revision-webpack-plugin": "^0.4.1",
     "postcss-cssnext": "^3.0.2",
