--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-runtime": "^6.26.0",
     "es6-promise": "^4.1.1",
     "material-ui": "^0.19.4",
+    "material-ui-icons": "^1.0.0-beta.17",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
@@ -43,7 +44,8 @@
     "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "typeface-roboto": "0.0.41"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
