--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "es6-promise": "^4.1.1",
-    "material-ui": "^0.19.4",
+    "material-ui": "^1.0.0-beta.18",
+    "material-ui-codemod": "^1.0.0-beta.11",
     "material-ui-icons": "^1.0.0-beta.17",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.6.0",
