--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,8 @@
       }
     ],
     "stage-0",
-    "react"
+    "react",
+    "flow"
   ],
   "env": {
     "test": {
@@ -16,7 +17,8 @@
           "env"
         ],
         "stage-0",
-        "react"
+        "react",
+        "flow"
       ]
     }
   },
