--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "babel-runtime": "^6.26.0",
     "es6-promise": "^4.1.1",
     "material-ui": "^1.0.0-beta.18",
-    "material-ui-codemod": "^1.0.0-beta.11",
     "material-ui-icons": "^1.0.0-beta.17",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.6.0",
@@ -57,6 +56,7 @@
     "babel-plugin-es6-promise": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "copyfiles": "^1.2.0",
@@ -67,6 +67,7 @@
     "eslint-plugin-jest": "^21.2.0",
     "eslint-plugin-react": "^6.10.3",
     "file-loader": "^1.1.5",
+    "flow-bin": "^0.57.3",
     "html-webpack-plugin": "^2.30.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^21.2.1",
