--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "es6-promise": "^4.1.1",
+    "jss": "^9.0.0",
     "material-ui": "^1.0.0-beta.18",
     "material-ui-icons": "^1.0.0-beta.17",
     "normalize.css": "^7.0.0",
@@ -54,6 +55,9 @@
     "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-es6-promise": "^1.1.1",
+    "babel-plugin-syntax-flow": "^6.18.0",
+    "babel-plugin-transform-flow-comments": "^6.22.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-flow": "^6.23.0",
@@ -71,7 +75,7 @@
     "html-webpack-plugin": "^2.30.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^21.2.1",
-    "less": "^3.0.0-alpha.3",
+    "less": "^2.3.1",
     "less-loader": "^4.0.5",
     "lodash": "^4.17.4",
     "manifest-revision-webpack-plugin": "^0.4.1",
