--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
   },
   "homepage": "https://github.com/maxurtutor/frontend#readme",
   "dependencies": {
+    "@types/react": "^16.0.21",
+    "@types/react-dom": "^16.0.2",
+    "@types/react-redux": "^5.0.12",
+    "@types/redux-logger": "^3.0.5",
+    "@types/webpack-env": "^1.13.2",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "es6-promise": "^4.1.1",
@@ -50,6 +55,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
+    "awesome-typescript-loader": "^3.3.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-jest": "^21.2.0",
@@ -86,9 +92,13 @@
     "react-pure-html-component": "0.0.1",
     "react-test-renderer": "^16.0.0",
     "rimraf": "^2.6.1",
+    "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.0",
     "stylelint": "^8.2.0",
     "stylelint-webpack-plugin": "^0.9.0",
+    "tslint": "^5.8.0",
+    "tslint-loader": "^3.5.3",
+    "typescript": "^2.6.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
