--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.js --progress",
-    "lint-js": "eslint src",
+    "lint-ts": "tslint src",
     "lint-css": "stylelint \"**/*.css \" --verbose stylelint --config ./.stylelintrc",
     "test": "jest",
     "prebuild": "rimraf build",
@@ -37,8 +37,6 @@
     "@types/redux-logger": "^3.0.5",
     "@types/webpack-env": "^1.13.2",
     "babel-polyfill": "^6.26.0",
-    "babel-runtime": "^6.26.0",
-    "es6-promise": "^4.1.1",
     "jss": "^9.0.0",
     "material-ui": "^1.0.0-beta.18",
     "material-ui-icons": "^1.0.0-beta.17",
@@ -56,26 +54,11 @@
   "devDependencies": {
     "autoprefixer": "^7.1.5",
     "awesome-typescript-loader": "^3.3.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-jest": "^21.2.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-es6-promise": "^1.1.1",
-    "babel-plugin-syntax-flow": "^6.18.0",
-    "babel-plugin-transform-flow-comments": "^6.22.0",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-eslint": "^8.0.2",
     "copyfiles": "^1.2.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
-    "eslint": "^3.19.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-jest": "^21.2.0",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint": "^4.10.0",
     "file-loader": "^1.1.5",
     "flow-bin": "^0.57.3",
     "html-webpack-plugin": "^2.30.1",
