--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "stylelint-webpack-plugin": "^0.9.0",
     "tslint": "^5.8.0",
     "tslint-loader": "^3.5.3",
+    "tslint-react": "^3.2.0",
     "typescript": "^2.6.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
