Add WebPack Config

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 .*
 
 !.gitignore
+!.eslintrc
 
-build
 node_modules
-package-lock.json
 
 /yarn.lock
 /yarn-error.log
+/dist/*.*
+
+!/dist/index.html
+
