--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.js --progress",
+    "prebuild": "rimraf build",
+    "build-dev": "cross-env NODE_ENV=development webpack -d --config config/webpack.config.js --progress",
+    "build-prod": "cross-env NODE_ENV=production webpack -p --config config/webpack.config.js --progress"
   },
   "repository": {
     "type": "git",
@@ -25,8 +28,15 @@
   },
   "homepage": "https://github.com/maxurtutor/frontend#readme",
   "devDependencies": {
+    "autoprefixer": "^8.2.0",
     "babel-eslint": "^8.2.2",
+    "cross-env": "^5.1.4",
+    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
+    "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^2.1.3",
+    "precss": "^3.1.2",
+    "style-loader": "^0.20.3",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14"
   },
