--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "precss": "^3.1.2",
     "style-loader": "^0.20.3",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
     "lodash": "^4.17.5"
