--- a/package.json
+++ b/package.json
@@ -30,16 +30,22 @@
   "devDependencies": {
     "autoprefixer": "^8.2.0",
     "babel-eslint": "^8.2.2",
+    "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "html-webpack-plugin": "^3.2.0",
+    "manifest-revision-webpack-plugin": "^0.4.1",
     "postcss-loader": "^2.1.3",
     "precss": "^3.1.2",
     "style-loader": "^0.20.3",
+    "stylelint": "^9.2.0",
+    "stylelint-webpack-plugin": "^0.10.4",
     "webpack": "^4.5.0",
+    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-dev-server": "^3.1.1",
+    "webpack-notifier": "^1.6.0"
   },
   "dependencies": {
     "lodash": "^4.17.5"
